🔧 MAJOR FIXES: Fixed all reported issues + Added professional features
✅ Fixed eraser continuous refresh bug
✅ Fixed zoom coordinate scaling issues
✅ Enhanced drag-drop with larger touch areas
✅ Fixed PDF download - now saves ALL annotations
✅ Added auto-save every 30 seconds
✅ Added smart notifications system
✅ Added annotation counter in header
✅ Added progress modal for downloads
✅ Added auto-restore previous work
✅ Enhanced mobile responsiveness

Now truly competitive with professional PDF editors!

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <div class="logo">
                 <i class="fas fa-file-pdf"></i>
                 <span>PDF EditorZ</span>
+                <span class="annotation-badge" id="annotationBadge" style="display: none;">
+                    <i class="fas fa-edit"></i>
+                    <span id="annotationCounter">0</span>
+                </span>
             </div>
             <nav class="nav">
                 <button class="nav-btn" onclick="showHelp()">
