✨ Added Cursor Tool: Professional selection & navigation mode
➕ New cursor/pointer tool for safe document navigation
🖱️ Set as default tool on app launch
⌨️ Added 'C' keyboard shortcut
🎯 Prevents accidental annotations while browsing
🔧 Enhanced mouse event handling for all tools
📚 Updated keyboard shortcuts documentation

Perfect for document review and safe navigation!

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 
             <div class="tool-section">
                 <h3><i class="fas fa-edit"></i> Düzenleme</h3>
+                <button class="tool-btn" id="cursorTool" onclick="activateTool('cursor')" title="İmleç (C)">
+                    <i class="fas fa-mouse-pointer"></i>
+                    İmleç
+                </button>
                 <button class="tool-btn" id="textTool" onclick="activateTool('text')" title="Metin Ekle (T)">
                     <i class="fas fa-font"></i>
                     Metin
@@ -143,6 +147,10 @@
                 <div class="shortcut-item">
                     <span>İleri Al</span>
                     <span class="shortcut-key">Ctrl+Y</span>
+                </div>
+                <div class="shortcut-item">
+                    <span>İmleç</span>
+                    <span class="shortcut-key">C</span>
                 </div>
                 <div class="shortcut-item">
                     <span>Metin</span>
